--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
             color: #333;
             margin: 0;
             padding: 0;
@@ -32,12 +32,6 @@
             background: linear-gradient(135deg, #6a11cb, #2575fc);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-        }
-        h2 {
-            color: #34495e;
-            margin-top: 1.5rem;
-            font-size: 1.8rem;
-            text-align: center;
         }
         label {
             display: block;
@@ -90,9 +84,6 @@
             color: #7f8c8d;
             font-size: 0.9rem;
         }
-        .calculator {
-            margin-bottom: 2rem;
-        }
     </style>
 </head>
 <body>
@@ -100,40 +91,37 @@
         <h1>AI-Powered Home Loan Assistant</h1>
 
         <!-- Home Loan Calculator -->
-        <div class="calculator">
-            <h2>Home Loan Calculator (₹)</h2>
-            <form id="loanForm">
-                <label for="loanAmount">Loan Amount (₹)</label>
-                <input type="number" id="loanAmount" placeholder="Enter loan amount" required>
+        <form id="loanForm">
+            <label for="loanAmount">Loan Amount (₹)</label>
+            <input type="number" id="loanAmount" placeholder="Enter loan amount" required>
 
-                <label for="propertyValue">Property Value (₹)</label>
-                <input type="number" id="propertyValue" placeholder="Enter property value" required>
+            <label for="propertyValue">Property Value (₹)</label>
+            <input type="number" id="propertyValue" placeholder="Enter property value" required>
 
-                <label for="interestRate">Interest Rate (%)</label>
-                <input type="number" id="interestRate" step="0.01" placeholder="Enter interest rate" required>
+            <label for="interestRate">Interest Rate (%)</label>
+            <input type="number" id="interestRate" step="0.01" placeholder="Enter interest rate" required>
 
-                <label for="loanTerm">Loan Term (Years)</label>
-                <input type="number" id="loanTerm" placeholder="Enter loan term" required>
+            <label for="loanTerm">Loan Term (Years)</label>
+            <input type="number" id="loanTerm" placeholder="Enter loan term" required>
 
-                <label for="monthlyIncome">Monthly Income (₹)</label>
-                <input type="number" id="monthlyIncome" placeholder="Enter monthly income" required>
+            <label for="monthlyIncome">Monthly Income (₹)</label>
+            <input type="number" id="monthlyIncome" placeholder="Enter monthly income" required>
 
-                <label for="monthlyObligations">Monthly Obligations (₹)</label>
-                <input type="number" id="monthlyObligations" placeholder="Enter monthly obligations" required>
+            <label for="monthlyObligations">Monthly Obligations (₹)</label>
+            <input type="number" id="monthlyObligations" placeholder="Enter monthly obligations" required>
 
-                <label for="creditScore">Credit Score</label>
-                <input type="number" id="creditScore" placeholder="Enter credit score" required>
+            <label for="creditScore">Credit Score</label>
+            <input type="number" id="creditScore" placeholder="Enter credit score" required>
 
-                <button type="submit">Calculate Home Loan</button>
-            </form>
+            <button type="submit">Calculate Home Loan</button>
+        </form>
 
-            <div class="result" id="loanResult">
-                <!-- Home Loan result will appear here -->
-            </div>
+        <div class="result" id="loanResult">
+            <!-- Home Loan result will appear here -->
         </div>
 
         <div class="footer">
-            Powered by KingDv Advanced AI | Secure & Reliable
+            Powered by Advanced AI | Secure & Reliable
         </div>
     </div>
 
